<resources>
    <string name="app_name">Crowns Tailor</string>
    <string name="nama_email_pengguna">Nama / Email Pengguna</string>
    <string name="masukkan_nama_email_pengguna_anda">Masukkan nama / email pengguna anda</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="password">Password</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="masuk">Masuk</string>
    <string name="main_logo">main_logo</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="masukkan_nama_pengguna_anda">Masukkan nama pengguna anda</string>
    <string name="register_with_google">Daftar dengan Google</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="login">Masuk</string>
    <string name="sign_in_google">Masuk dengan Google</string>
    <string name="exit_confirmation">Tekan lagi untuk keluar</string>
    <string name="title_home">Home</string>
    <string name="title_offer">Penawaran</string>
    <string name="title_order">Pesanan</string>
    <string name="title_other">Lainnya</string>
    <string name="search_hint">Cari pesanan…</string>
    <string name="semua">Semua</string>
    <string name="pesanan_baru">Pesanan Baru</string>
    <string name="dikerjakan">Dikerjakan</string>
    <string name="dikirim">Dikirim</string>
    <string name="selesai">Selesai</string>
    <string name="logout_header">Logout</string>
    <string name="logout_confirm">Yakin ingin logout?</string>
    <string name="logout_yes">Ya</string>
    <string name="logout_success">Berhasil logout</string>
    <string name="logout_no">Tidak</string>
    <string name="title_atur_produk_jahit">Atur Produk Jahit</string>
    <string name="key_atur_produk_jahit">atur_produk_jahit</string>
    <string name="title_atur_profil">Atur Profil</string>
    <string name="key_atur_profil">atur_profil</string>
    <string name="title_atur_rekening_bank">Atur Rekening Bank</string>
    <string name="key_atur_rekening_bank">atur_rekening_bank</string>
    <string name="profile_header">profileHeader</string>
    <string name="logout">Logout</string>
    <string name="dummy_join_date">Bergabung sejak 19 Agustus 2020</string>
    <string name="dummy_name">Michael Ricky</string>
    <string name="pesanan_terbaru">Pesanan Terbaru</string>
    <string name="siap_dikirim">Siap dikirim</string>
    <string name="dummy_greetings">Selamat pagi, Michael</string>
    <string name="pendapatan_hari_ini">Pendapatan hari ini</string>
    <string name="dummy_income">Rp 0</string>
    <string name="penawaran_baru">Penawaran Baru</string>
    <string name="empty_number">0</string>
    <string name="offer_type_list">Menawar untuk %1$s</string>
    <string name="title_offer_detail">Detail Penawaran</string>
    <string name="dummy_offer_type">Menawar untuk Seragam SMP</string>
    <string name="dummy_date">5 Juni 2021</string>
    <string name="product_photo_content_desc">product_photo</string>
    <string name="dummy_trx_id">INV/10007</string>
    <string name="dummy_product_name">Seragam SMP</string>
    <string name="title_detail_penjahit">Detail Penjahit</string>
    <string name="masukkan_nama_lengkap_anda">Masukkan nama lengkap anda</string>
    <string name="masukkan_alamat_anda">Masukkan alamat anda</string>
    <string name="masukkan_kabupaten_anda">Masukkan nama kabupaten anda</string>
    <string name="masukkan_provinsi_anda">Masukkan nama provinsi anda</string>
    <string name="masukkan_kecamatan_anda">Masukkan nama kecamatan anda</string>
    <string name="masukkan_nomor_hp_anda">Cth: 081299087656</string>
    <string name="masukkan_tanggal_lahir_anda">DD/MM/YYYY</string>
    <string name="next">Selanjutnya</string>
    <string name="masukkan_kode_pos_anda">Masukkan kode pos anda</string>
    <string name="your_details">Detail Anda</string>
    <string name="tailor_detail_subtitle">Masukkan data diri anda. Detil lain dapat anda ubah dalam halaman profil.</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="address">Alamat</string>
    <string name="subdistrict">Kecamatan</string>
    <string name="district">Kabupaten/Kota</string>
    <string name="province">Provinsi</string>
    <string name="postal_code">Kode Pos</string>
    <string name="phone_number">Nomor HP</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="title_pilih_produk">Daftar Produk</string>
    <string name="what_can_you_make">Apa yang dapat anda buat?</string>
    <string name="tailor_products_list_subtitle">Pilihlah produk jahit yang dapat anda buat. Anda dapat mengubah pilihan produk setelah pendaftaran dalam menu profil.</string>
    <string name="list_empty_error">Anda harus memilih minimal satu jenis produk jahit.</string>
    <string name="payout_payout">Payout, payout!</string>
    <string name="tailor_bank_account_subtitle">Masukkan nomor rekening anda yang nantinya akan digunakan untuk penarikan dana.</string>
    <string name="finish_registration">Selesaikan Pendaftaran</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="masukkan_nomor_rekening_anda">Masukkan nomor rekening anda</string>
    <string name="bank_name">Nama Bank</string>
    <string name="masukkan_nama_bank_anda">Masukkan nama bank anda</string>
    <string name="masukkan_nama_pemilik_rekening">Masukkan nama pemilik rekening</string>
    <string name="account_holder_name">Nama Pemilik Rekening</string>
    <string name="register_header">Registrasi</string>
    <string name="register_confirm">Apakah anda yakin semua data yang anda masukkan sudah benar?</string>
    <string name="title_completing_registration">Menyelesaikan Registrasi…</string>
    <string name="registration_error">Registrasi Error. Silakan coba beberapa saat lagi.</string>
    <string name="login_failed">Login gagal. Periksa kembali data anda.</string>
    <string name="login_success">Selamat datang, %1$s</string>
    <string name="welcome_message">Halo, %1$s</string>
    <string name="product_photo">product_photo</string>
    <string name="kain_dan_bahan"><![CDATA[Kain & Bahan]]></string>
    <string name="ukuran">Ukuran</string>
    <string name="lengan">Lengan</string>
    <string name="leher">Leher</string>
    <string name="pinggang">Pinggang</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="dada">Dada</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="dummy_weight">70kg</string>
    <string name="dummy_length">70cm</string>
    <string name="design">Desain</string>
    <string name="from_seller">Dari Seller</string>
    <string name="no_specific_design">Tidak ada desain spesifik</string>
    <string name="your_price">Harga Anda</string>
    <string name="masukkan_harga_anda">Masukkan penawaran harga anda</string>
    <string name="working_estimation">Estimasi Pengerjaan</string>
    <string name="masukkan_estimasi_pengerjaan">Contoh: 3 hari</string>
    <string name="set_estimation_and_price">Berikan Harga dan Estimasi</string>
    <string name="dummy_price">Rp 100.000</string>
    <string name="dummy_working_estimation">3 hari</string>
    <string name="status">Status</string>
    <string name="dummy_offer_status">Harga dan Estimasi telah Diatur</string>
    <string name="new_offer">Tawaran Baru</string>
    <string name="price_sent">Harga telah diberikan</string>
    <string name="price_declined">Tawaran Ditolak</string>
    <string name="price_accepted">Tawaran Diterima</string>
    <string name="new_price">Harga Baru</string>
    <string name="design_link">Tekan untuk Melihat</string>
    <string name="instruksi">Instruksi</string>
    <string name="dummy_instruction">Contoh instruksi pembuatan. Masukkan seluruhnya kedalam plastik dan ikat rata, lalu kirim ke alamat yang tertera</string>
    <string name="title_order_detail">Detail Pesanan</string>
    <string name="no_invoice">No. Invoice</string>
    <string name="dummy_invoice_number">ORD-1</string>
    <string name="detail_pengiriman">Detail Pengiriman</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="dummy_phone_number">081223728837</string>
    <string name="dummy_address">Jalan Guntur Raya No. 46, Setiabudi, RT.8/RW.2, Guntur, Setiabudi, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta, 12960</string>
    <string name="payment_detail">Rincian Pembayaran</string>
    <string name="send_order">Kirim Pesanan</string>
    <string name="start_working">Mulai Kerjakan Pesanan</string>
    <string name="total_harga">Total Harga</string>
    <string name="shipment_fee">Ongkos Kirim</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="alamat_penerima">Alamat Penerima</string>
    <string name="invoice_number">ORD-%1$s</string>
    <string name="title_order_instructions">Instruksi Pesanan</string>
    <string name="product_name">Nama Produk</string>
    <string name="length_format">%1$scm</string>
    <string name="weight_format">%1$skg</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="input_error">Ada kolom yang error. Periksa kembali isi setiap kolom.</string>
    <string name="penjahit">Penjahit</string>
    <string name="sew_price">Harga Jahit</string>
    <string name="material_price">Harga Material</string>
    <string name="delivery_price">Harga Kirim</string>
    <string name="take_price">Harga Jemput</string>
    <string name="set_price">Berikan Harga</string>
    <string name="design_satu">Design 1</string>
    <string name="design_number">Desain %1$s</string>
    <string name="response_sent">Tawaran sudah ditanggapi</string>
    <string name="pesanan_dibayar">Pesanan dibayar</string>
    <string name="harga_baru">Harga Baru</string>
    <string name="tolak_tawaran">Tolak Tawaran</string>
    <string name="terima_tawaran">Terima Tawaran</string>
    <string name="error_input_price">Terjadi kesalahan saat mengirim data. Coba lagi dalam beberapa saat.</string>
    <string name="offer_accepted">Penawaran diterima</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="no_new_order">Tidak ada pesanan.</string>
    <string name="offer_declined">Penawaran ditolak</string>
    <string name="last_price">Harga Terakhir</string>
    <string name="title_design_order">Desain Kustom</string>
    <string name="detail_penjemputan">Detail Penjemputan</string>
    <string name="masukkan_estimasi">Masukkan Estimasi Pengerjaan</string>
    <string name="estimasi_baru">Estimasi Baru</string>
    <string name="estimasi_terakhir">Estimasi Terakhir</string>
    <string name="update_success">Update data sukses!</string>
    <string name="update_error">Update data error. Silakan coba lagi dalam beberapa saat.</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="pesanan_diantar_pembeli">Pesanan diantar pembeli</string>
    <string name="pesanan_dijemput">Pesanan dijemput</string>
    <string name="pesanan_dikirim">Pesanan dikirim</string>
    <string name="pesanan_dijemput_pembeli">Pesanan dijemput pembeli</string>
    <string name="dummy_rating">4.98</string>
    <string name="tidak_perlu_dikirm">Tidak perlu dikirim</string>
    <string name="tidak_perlu_dijemput">Tidak perlu dijemput</string>
    <string name="alamat_jemput">Alamat Jemput</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="username">Username</string>
    <string name="masukkan_username_anda">Masukkan username anda</string>
</resources>