<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.detail.OrderInstructionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/title_order_instructions"
            app:titleTextAppearance="@style/ToolbarTextTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/product_name"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_product_name_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textSize="12sp"
                android:text="@string/dummy_product_name"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/ukuran"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:shrinkColumns="2,4"
                android:stretchColumns="1,3,5">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:text="@string/lengan"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_arm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/lato"
                        android:paddingHorizontal="8dp"
                        android:text="@string/dummy_length"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/pinggang"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_waist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingHorizontal="8dp"
                        android:text="@string/dummy_length"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingHorizontal="16dp"
                        android:text="@string/dada"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_chest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingHorizontal="8dp"
                        android:text="@string/dummy_length"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:text="@string/leher"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_neck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingHorizontal="8dp"
                        android:text="@string/dummy_length"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/tinggi_badan"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingHorizontal="8dp"
                        android:text="@string/dummy_length"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/berat_badan"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="@string/dummy_weight"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/design"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_design_link_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textSize="12sp"
                android:text="@string/no_specific_design"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/instruksi"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_product_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textSize="12sp"
                android:text="@string/dummy_instruction"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>