<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="2,4"
            android:stretchColumns="1,3,5"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="12sp"
                    android:text="@string/lengan" />

                <TextView
                    android:id="@+id/tv_arm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato"
                    android:paddingHorizontal="8dp"
                    android:text="@string/dummy_length"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp"
                    android:text="@string/pinggang" />

                <TextView
                    android:id="@+id/tv_waist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingHorizontal="8dp"
                    android:textSize="12sp"
                    android:text="@string/dummy_length" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingHorizontal="16dp"
                    android:textSize="12sp"
                    android:text="@string/dada" />

                <TextView
                    android:id="@+id/tv_chest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingHorizontal="8dp"
                    android:textSize="12sp"
                    android:text="@string/dummy_length" />
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="12sp"
                    android:text="@string/leher" />

                <TextView
                    android:id="@+id/tv_neck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingHorizontal="8dp"
                    android:textSize="12sp"
                    android:text="@string/dummy_length" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp"
                    android:text="@string/tinggi_badan" />

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingHorizontal="8dp"
                    android:textSize="12sp"
                    android:text="@string/dummy_length" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp"
                    android:text="@string/berat_badan" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp"
                    android:text="@string/dummy_weight" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/lato_bold"
            android:textSize="12sp"
            android:text="@string/instruksi" />

        <TextView
            android:id="@+id/tv_offer_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/lato"
            android:textSize="12sp"
            android:text="@string/dummy_instruction" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>